style: fix header alignment

--- a/nx2/blocks/chat/chat.css
+++ b/nx2/blocks/chat/chat.css
@@ -8,7 +8,6 @@
   font-family: var(--s2-font-family);
   color: var(--s2-gray-800);
   font-weight: var(--s2-body-font-weight);
-  margin: 0 auto;
   box-sizing: border-box;
   align-items: center;
 
